# image-classification

./: Cargo.toml
examples/: save.rs  torch_train.py  train.rs
src/: lib.rs
src/datasets/: cifar10.rs  cifar100.rs  download.rs  errors.rs  mnist.rs  mod.rs  split.rs
