[package]
name = "image-classification"
version = "0.1.0"
edition = "2021"
description = "dfdx image classification"
license = "MIT OR Apache-2.0"

keywords = [
    "dfdx",
    "deep-learning",
    "neural-network",
    "image",
    "image-classification"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curl = { version = "0.4.44", default-features = false }
flate2 = { version = "1.0.25", default-features = false, features = ["rust_backend"] }
indicatif = { version = "0.17.3", default-features = false }
md5 = { version = "0.7.0", default-features = false }
tar = { version = "0.4.38", default-features = false }
image = { version = "0.24.5", default-features = false }
dfdx = { path = "../dfdx" , features = ["nightly", "intel-mkl"] }
rand = { version = "0.8.5", default-features = false }
